--- a/WebContent/static_root/css/apt.css
+++ b/WebContent/static_root/css/apt.css
@@ -15,6 +15,13 @@
 .sect_btn_area > ul {float:right; overflow:hidden;}
 .sect_btn_area > ul > li {display:inline-block; margin-left:3px;}
 
+/* 하단 사이트 슬라이드 */
+.site_slide {width:100%; padding:15px 0; border-top:1px solid rgba(64,64,64,0.1); overflow:hidden;}
+.site_slide ul {position:relative; width:1200px; height:62px; margin:0 auto; overflow:hidden;}
+.site_slide ul li {float:left; display:table; width:230px; height:62px; margin:0 5px 2px 5px; box-sizing:border-box; border:1px solid #e5e5e5; overflow:hidden;}
+.site_slide ul li a {display:table-cell; vertical-align:middle; width:100%; box-sizing:border-box; padding:15px;}
+
+
 /* 반응형 버튼 */
 .mBtn1 {display:inline-block; font-size:14px; line-height:18px; color:#fff !important; text-align:center; box-sizing:border-box; padding:6px 10px; border-radius:2px; background:#3375ca;}
 .mBtn1:hover {color:#fff; background:#2f6cba;}
@@ -32,6 +39,7 @@
 .mBtn7:hover {color:#fff; background:#c22853;}
 
 @media all and (max-width: 1199px){
+	.site_slide > ul {width:970px;}
 }
 
 @media all and (max-width: 989px){
@@ -46,6 +54,8 @@
 	.myRM .tabBox > li > a {float:none; display:block;}
 	
 	.sect_btn_area {margin-top:0; padding:0 15px 30px 15px; box-sizing:border-box;}
+	
+	.site_slide ul {width:750px; box-sizing:border-box; padding:0 15px;}
 }
 
 @media all and (max-width: 767px){
@@ -58,10 +68,18 @@
 	.sect_btn_area > ul.btn_area_three > li {float:left; width:32.6667%;}
 	.sect_btn_area > ul.btn_area_three > li:nth-child(1) {margin:0;}
 	.sect_btn_area > ul.btn_area_three > li:nth-child(2) {margin:0 1%;}
+	
+	.site_slide ul {width:480px; box-sizing:border-box; padding:0 6px;}
+	.site_slide ul li {margin:0 0 2px 2px;}
 }
 
 @media all and (max-width: 479px){
+	.site_slide ul {width:320px; box-sizing:border-box; padding:0 20px;}
+	.site_slide ul div {width:100%;}
+	.site_slide ul div li {width:100%; margin:0 0 2px 0;}
+	.site_slide ul div li a {text-align:center;}
 }
+
 
 
 /* 핵심역량 소개>핵심역량 소개 */
@@ -186,27 +204,27 @@
 
 
 /* 핵심역량 소개>서일 인증제 소개 */
-.seoil_core p {font-size:16px; word-break:keep-all;}
+.apt_core p {font-size:16px; word-break:keep-all;}
 
 .cont_img_area > img {width:100%; height:auto;}
 
-.seoil_core_intro {position:relative; width:100%; text-align:center; padding-bottom:30px; margin-bottom:30px; overflow:hidden;}
-.seoil_core_intro:after {content:""; display:block; position:absolute; left:48%; bottom:0; width:30px; height:5px; background:#3375ca;}
-.seoil_core_intro > h3 {font-size:28px; line-height:32px; font-weight:500; color:#454f63; padding-bottom:15px;}
-.seoil_core_intro > p {font-size:16px; line-height:24px; margin-bottom:10px; word-break:keep-all;}
-.seoil_core_intro > p:last-child {margin-bottom:0;}
+.apt_core_intro {position:relative; width:100%; text-align:center; padding-bottom:30px; margin-bottom:30px; overflow:hidden;}
+.apt_core_intro:after {content:""; display:block; position:absolute; left:48%; bottom:0; width:30px; height:5px; background:#3375ca;}
+.apt_core_intro > h3 {font-size:28px; line-height:32px; font-weight:500; color:#454f63; padding-bottom:15px;}
+.apt_core_intro > p {font-size:16px; line-height:24px; margin-bottom:10px; word-break:keep-all;}
+.apt_core_intro > p:last-child {margin-bottom:0;}
 
-.seoil_core_list {margin-top:20px; border-top:1px solid #ddd; overflow:hidden;}
-.seoil_core_list > li {width:100%; box-sizing:border-box; padding:15px; border-bottom:1px dashed #ddd; overflow:hidden;}
-.seoil_core_list > li > dl {overflow:hidden;}
-.seoil_core_list > li > dl > dt {float:left; width:150px; margin-right:15px; text-align:center; font-size:18px; font-weight:500; color:#454f63;}
-.seoil_core_list > li > dl > dt span {display:block; font-size:14px; font-weight:normal; padding-bottom:3px;}
-.seoil_core_list > li > dl > dd {float:right; text-align:left; width:calc(100% - 165px); width:-webkit-calc(100% - 165px); font-size:16px;}
-.seoil_core_list > li > dl > dd table td, .seoil_core_list > li > dl > dd table th {font-size:15px;}
-.seoil_core_list > li > dl > dd p {font-size:16px;}
+.apt_core_list {margin-top:20px; border-top:1px solid #ddd; overflow:hidden;}
+.apt_core_list > li {width:100%; box-sizing:border-box; padding:15px; border-bottom:1px dashed #ddd; overflow:hidden;}
+.apt_core_list > li > dl {overflow:hidden;}
+.apt_core_list > li > dl > dt {float:left; width:150px; margin-right:15px; text-align:center; font-size:18px; font-weight:500; color:#454f63;}
+.apt_core_list > li > dl > dt span {display:block; font-size:14px; font-weight:normal; padding-bottom:3px;}
+.apt_core_list > li > dl > dd {float:right; text-align:left; width:calc(100% - 165px); width:-webkit-calc(100% - 165px); font-size:16px;}
+.apt_core_list > li > dl > dd table td, .apt_core_list > li > dl > dd table th {font-size:15px;}
+.apt_core_list > li > dl > dd p {font-size:16px;}
 
-.seoil_core_list > li:nth-child(1) > dl > dd {padding:15px 0;}
-.seoil_core_list > li:nth-child(3) > dl > dd {padding:5px 0;}
+.apt_core_list > li:nth-child(1) > dl > dd {padding:15px 0;}
+.apt_core_list > li:nth-child(3) > dl > dd {padding:5px 0;}
 
 .level_define {overflow:hidden;}
 .level_define > li {padding:5px 0; word-break:keep-all;}
@@ -268,14 +286,14 @@
 }
 
 @media all and (max-width: 767px){
-	.seoil_core_list > li > dl > dt {float:none; width:100%; margin:0 0 15px 0;}
-	.seoil_core_list > li > dl > dt br {display:none;}
-	.seoil_core_list > li > dl > dt span {display:inline-block; padding:0 3px 0 0;}
-	.seoil_core_list > li > dl > dd {float:none; text-align:left; width:100%;}
-	.seoil_core_list > li > dl > dd table td, .seoil_core_list > li > dl > dd table th {font-size:14px;}
+	.apt_core_list > li > dl > dt {float:none; width:100%; margin:0 0 15px 0;}
+	.apt_core_list > li > dl > dt br {display:none;}
+	.apt_core_list > li > dl > dt span {display:inline-block; padding:0 3px 0 0;}
+	.apt_core_list > li > dl > dd {float:none; text-align:left; width:100%;}
+	.apt_core_list > li > dl > dd table td, .apt_core_list > li > dl > dd table th {font-size:14px;}
 	
-	.seoil_core_list > li:nth-child(1) > dl > dd {text-align:center; padding:0;}
-	.seoil_core_list > li:nth-child(3) > dl > dd {padding:0;}
+	.apt_core_list > li:nth-child(1) > dl > dd {text-align:center; padding:0;}
+	.apt_core_list > li:nth-child(3) > dl > dd {padding:0;}
 	
 	.core_need {padding:7px 10px;}
 	.core_need > li {float:none; width:100%; font-size:14px; padding:3px 0;}
@@ -833,10 +851,10 @@ display:-webkit-box; height:45px; line-height:22.5px; white-space:normal; text-o
 .ulCsltSelect > li a {display:block; color:#fff; font-size:16px; line-height:16px; font-weight:500; padding:14px 10px; margin-bottom:20px; text-align:center; border-radius:3px; background:#35609c;}
 .ulCsltSelect > li a:hover {background:#254f88;}
 .ulCsltSelect > li:nth-child(1) > div.con-img {background:url(/static_root/images/content/Con01.png) center center no-repeat; background-size:cover; overflow:hidden;}
-.ulCsltSelect > li:nth-child(2) > div.con-img {background:url(/static_root/images/content/ulCon01.jpg) center center no-repeat; background-size:cover; overflow:hidden;}
+.ulCsltSelect > li:nth-child(2) > div.con-img {background:url(/static_root/images/content/Con02.png) center center no-repeat; background-size:cover; overflow:hidden;}
 
 .ulCsltSelect2 {width:100%; overflow:hidden;}
-.ulCsltSelect2 > li {float:left; margin:0 auto; width:49%; height:450px; margin-right:2%; padding:20px; box-sizing:border-box; border:#e5e5e5 1px solid;}
+.ulCsltSelect2 > li {float:left; margin:0 auto; width:49%; height:520px; margin-right:2%; padding:20px; box-sizing:border-box; border:#e5e5e5 1px solid;}
 .ulCsltSelect2 > li:last-child {margin-right:0;}
 .ulCsltSelect2 > li h4 {margin-bottom:20px; font-size:30px; line-height:30px; color:#333; font-weight:500; text-align:center;}
 .ulCsltSelect2 > li h5 {font-size:18px; color:#099cd2; font-weight:500; text-align:center; margin-top:10px;}
@@ -846,7 +864,7 @@ display:-webkit-box; height:45px; line-height:22.5px; white-space:normal; text-o
 .ulCsltSelect2 > li div.text-ab p:last-child {padding-bottom:0;}
 .ulCsltSelect2 > li a {display:block; color:#fff; font-size:16px; line-height:16px; font-weight:500; padding:14px 10px; margin-bottom:20px; text-align:center; border-radius:3px; background:#35609c;}
 .ulCsltSelect2 > li a:hover {background:#254f88;}
-.ulCsltSelect2 > li:nth-child(1) > div.con-img {background:url(/static_root/images/content/Con02.png) center center no-repeat; background-size:cover; overflow:hidden;}
+.ulCsltSelect2 > li:nth-child(1) > div.con-img {background:url(/static_root/images/content/ulCon01.jpg) center center no-repeat; background-size:cover; overflow:hidden;}
 .ulCsltSelect2 > li:nth-child(2) > div.con-img {background:url(/static_root/images/content/ulCon02.jpg) center center no-repeat; background-size:cover; overflow:hidden;}
 
 @media all and (max-width: 1199px){
@@ -860,6 +878,23 @@ display:-webkit-box; height:45px; line-height:22.5px; white-space:normal; text-o
 @media all and (max-width: 767px){
 	.ulCsltSelect > li {float:none; width:100%; height:auto; margin:0 0 15px 0;}
 	.ulCsltSelect > li:last-child {margin:0;}
+}
+
+@media all and (max-width: 479px){
+}
+
+
+@media all and (max-width: 1199px){
+	.ulCsltSelect2 > li {height:588px;}
+}
+
+@media all and (max-width: 989px){
+	.ulCsltSelect2 > li {height:608px;}
+}
+
+@media all and (max-width: 767px){
+	.ulCsltSelect2 > li {float:none; width:100%; height:auto; margin:0 0 15px 0;}
+	.ulCsltSelect2 > li:last-child {margin:0;}
 }
 
 @media all and (max-width: 479px){
@@ -1011,3 +1046,5 @@ display:-webkit-box; height:45px; line-height:22.5px; white-space:normal; text-o
 .bbsListBoxLot table tbody a {color:#0f21a6;}
 .bbsListBoxLot table tbody td > strong.tHide {display:none;}
 .bbsListBoxLot table tbody th > strong.tHide {display:none;}
+
+
